# storage/api-docs/api-docs.json
@@ -457,7 +457,7 @@
                 ],
                 "summary": "Get all cars",
                 "description": "Get all cars",
-                "operationId": "index_cars",
+                "operationId": "getCars",
                 "responses": {
                     "200": {
                         "description": "Successful get data cars",
@@ -490,7 +490,7 @@
                 ],
                 "summary": "Add a car",
                 "description": "Add type of a car",
-                "operationId": "store_cars",
+                "operationId": "createCar",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -529,9 +529,6 @@
                                     },
                                     "type_id": {
                                         "type": "integer"
-                                    },
-                                    "user_id": {
-                                        "type": "integer"
                                     }
                                 },
                                 "type": "object"
@@ -564,6 +561,69 @@
                                                     "items": {
                                                         "type": "string",
                                                         "example": "The description field is required"
+                                                    }
+                                                },
+                                                "price": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The price field is required"
+                                                    }
+                                                },
+                                                "transmission": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The transmission field is required"
+                                                    }
+                                                },
+                                                "condition": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The condition field is required"
+                                                    }
+                                                },
+                                                "year": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The year field is required"
+                                                    }
+                                                },
+                                                "km": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The km field is required"
+                                                    }
+                                                },
+                                                "stock": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The stock field is required"
+                                                    }
+                                                },
+                                                "image": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The image field is required"
+                                                    }
+                                                },
+                                                "brand_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The brand_id field is required"
+                                                    }
+                                                },
+                                                "type_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The type_id field is required"
                                                     }
                                                 }
                                             },
@@ -613,7 +673,7 @@
                 ],
                 "summary": "Get a car",
                 "description": "Get a car",
-                "operationId": "show_cars",
+                "operationId": "getCarById",
                 "parameters": [
                     {
                         "name": "id",
@@ -719,9 +779,6 @@
                                     },
                                     "type_id": {
                                         "type": "integer"
-                                    },
-                                    "user_id": {
-                                        "type": "integer"
                                     }
                                 },
                                 "type": "object"
@@ -754,6 +811,69 @@
                                                     "items": {
                                                         "type": "string",
                                                         "example": "The description field is required"
+                                                    }
+                                                },
+                                                "price": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The price field is required"
+                                                    }
+                                                },
+                                                "transmission": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The transmission field is required"
+                                                    }
+                                                },
+                                                "condition": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The condition field is required"
+                                                    }
+                                                },
+                                                "year": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The year field is required"
+                                                    }
+                                                },
+                                                "km": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The km field is required"
+                                                    }
+                                                },
+                                                "stock": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The stock field is required"
+                                                    }
+                                                },
+                                                "image": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The image field is required"
+                                                    }
+                                                },
+                                                "brand_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The brand_id field is required"
+                                                    }
+                                                },
+                                                "type_id": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The type_id field is required"
                                                     }
                                                 }
                                             },
@@ -947,7 +1067,7 @@
                         }
                     },
                     "200": {
-                        "description": "Successful add data types",
+                        "description": "Successful add data type",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -1026,12 +1146,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             },
             "put": {
                 "tags": [
